--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 	font-family: 'Dosis', 'Open Sans', sans-serif;
 	color: #2f2f2f;
 	font-size: 14px;
-	line-height: 30px;
+	/*line-height: 30px;*/
 	font-weight: 400;
 	overflow-x: hidden;
 	-webkit-text-size-adjust: 100%;
@@ -348,7 +348,7 @@ h6 {
 p {
 	font-family: 'Open Sans', sans-serif;
 	letter-spacing: 1px;
-	line-height: 28px;
+	line-height: 26px;
 }
 .btn {
 	font-size: 13px;
@@ -622,7 +622,7 @@ p {
 	position: relative;
 	left: 0px;
 	top: 0px;
-	background: rgba(255, 255, 255, 0) url("../FulcrumPoint/images/grey-balls.png") 100% 100% no-repeat;
+	background: rgba(255, 255, 255, 0) url("../FulcrumPoint/images/grey-balls.jpg") 100% 100% no-repeat;
     
     background-size: cover; /* Масштабируем фон */
 
@@ -2061,7 +2061,7 @@ img.mfp-img {
 	font-weight: 600;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	width: 130px;
+	width: 70%;
 }
 .portfolio-meta li a {
 	color: #a7a7a7;
@@ -2529,6 +2529,7 @@ ul.choose-list li {
 }
 .post-content p {
 	margin-bottom: 30px;
+	text-align: justify;
 }
 .post-content h2 {
 	font-weight: 600;
@@ -3857,4 +3858,9 @@ gin-bottom:0;
  border-top: 1px solid #EAEAEA;
  margin-left: -4px;
 }
+}
+
+.size-banner-tumbnail{
+	width: 100%;
+	height: auto;
 }
