--- a/style.css
+++ b/style.css
@@ -3926,3 +3926,31 @@ gin-bottom:0;
 	
 }
 
+.side-bar .widget_search {
+	margin-top: 60px;
+	margin-bottom: 10px;
+}
+
+.side-bar .widget_search form .btn {
+	background: #fff none repeat scroll 0 0;
+	border: 1px solid #ccc;
+	border-left: 0px;
+	color: #909090;
+	float: right;
+	font-size: 18px;
+	height: 52px;
+	position: relative;
+	text-align: center;
+	width: 60px;
+	margin-top: 0px;
+}
+.side-bar .widget_search form .btn:hover {
+	background: #8cbc15 none repeat scroll 0 0;
+	color: #fff;	
+	border: 1px solid #8cbc15;
+	border-left: 0px;
+}
+
+.side-bar .widget_search  :focus {
+	border: 1px solid #aaa;
+}
